@@ -86,6 +86,7 @@ int verbose_resize_gaussian(fits *image, int toX, int toY, opencv_interpolation 
 int verbose_rotate_fast(fits *image, int angle);
 int verbose_rotate_image(fits *image, rectangle area, double angle, int interpolation, int cropped, gboolean clamp);
 
+gboolean crop_gui_updates(gpointer user); // used by the command
 
 /* crop sequence data from GUI */
 struct crop_sequence_data {
@@ -119,6 +120,8 @@ int crop(fits *fit, rectangle *bounds);
 gpointer crop_sequence(struct crop_sequence_data *crop_sequence_data);
 
 gpointer scale_sequence(struct scale_sequence_data *scale_sequence_data);
+
+int eqcrop(double ra1, double dec1, double ra2, double dec2, int margin_px, double margin_asec, int minsize, fits *fit);
 
 const char *interp_to_str(int interpolation);
 
