@@ -74,6 +74,7 @@ int	process_dumpheader(int nb);
 
 int	process_entropy(int nb);
 int	process_epf(int nb);
+int	process_eqcrop(int nb);
 int	process_exit(int nb);
 int	process_extract(int nb);
 int	process_extractGreen(int nb);
