@@ -41,6 +41,7 @@
 #define STR_DUMPHEADER N_("Dumps the FITS header of the loaded image in the console")
 
 #define STR_ENTROPY N_("Computes the entropy of the loaded image on the displayed layer, only in the selected area if one has been selected or in the whole image. The entropy is one way of measuring the noise or the details in an image")
+#define STR_EQCROP N_("Crop the loaded image to bounding coordinates. Image must have an astrometric solution. A border of 10 pixels around the box that fits the coordinates is added by default, it can be changed with <b>-marginpx=</b> or <b>-marginasec=</b> (margin it arcseconds). A minimal cropped image size in pixels can be specified with <b>-minsize=</b>")
 #define STR_EPF N_("Applies an edge preserving filter. By default a bilateral filter is applied; a guided filter can be specified using the argument <b>-guided</b>. The filter diameter defaults to 3 and can be set using <b>-d=</b>. Be careful with values of d greater than 20 as the algorithm can be computationally expensive.\n\nThe intensity filtering sigma value can be set using <b>-si=</b> and the spatial sigma value can be set using <b>-ss=</b>. Sigma values represent the difference in pixel values over which the filter acts strongly: for 32-bit images the value should be between 0 and 1.0, whereas for 16-bit images it should be between 0 and 65535. The defaults if not specified are for both to be set to 11. If <b>-d=0</b> is set then the filter diameter will be set automatically based on the value of <b>-ss</b>. <i>Note that when applying a guided filter, only <b>-sc</b> applies.</i>\n\nWhen specifying a guided filter, a guide image may be set using <b>-guideimage=</b>. The default if no guide image is specified is to perform a self-guided filter. <i>Note: the guide image must have the same dimensions as the image to be filtered!</i>\n\nThe strength of the filter can be modulated using the <b>-mod=</b> argument. If mod = 1.0 the full effect of the filter will be applied; for mod less than 1.0 a proportion of the original image will be mixed with the result, and for mod = 0.0 no filtering will be applied. This command is mask-aware and will obey the mask if and only if the <b>-mask</b> flag is provided")
 #define STR_EXIT N_("Quits the application")
 #define STR_EXTRACT N_("Extracts <b>NbPlans</b> planes of wavelet domain of the loaded image.\nSee also WAVELET and WRECONS. For color extraction, see SPLIT")
