@@ -7,6 +7,7 @@ siril-1.5.0
 * Introduced generic_image_worker to standardize image operations (!965)
 * Added splashscreen at startup (!975)
 * Added image masks (!981)
+* Added eqcrop command (!889)
 * Added catmag command (!888)
 
 siril-1.4.2
